--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,10 +31,10 @@
   },
   "include": [
       "src"
-  ],
-  "references": [
-      {
-          "path": "./tsconfig.node.json"
-      }
   ]
+//   "references": [
+//       {
+//           "path": "./tsconfig.node.json"
+//       }
+//   ]
 }
